# HF2024

./: .gitignore  README.md  pyproject.toml
hf2024/io/: json.py
hf_bi_python_exercise/: main.py
hf_bi_python_exercise/io/: json.py
hf_bi_python_exercise/recipes/: cleanse.py
hf_bi_python_exercise/spark/: session.py
recipes-etl/: Chilies.csv  Results.csv
tests/hf_bi_python_exercise/io/: test_json.py
tests/hf_bi_python_exercise/recipes/: test_cleanse.py
